# tauri-blazor-radzen-boilerplate

./: CHANGELOG.md  README.md  tauri-blazor-boilerplate.sln
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yml  release.yml  rust-cache.yml
docs/: MACOS_UNIVERSAL_BUILDS.md  MOBILE_SETUP.md
scripts/: build-macos-universal.sh  fast-build.sh  mobile-build.sh  optimize-rust.sh  run-project.sh
src/: App.razor  Program.cs  TauriBlazorBoilerplate.csproj  _Imports.razor
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Components/: ErrorHandler.razor  LoadingSpinner.razor  VersionDisplay.razor
src/Layout/: MainLayout.razor  MainLayout.razor.cs
src/Pages/: About.razor  Home.razor  TauriExamples.razor
src/Properties/: launchSettings.json
src/Services/: VersionService.cs
src/wwwroot/: index.html
