[package]
name = "tauri-blazor-boilerplate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_blazor_boilerplate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Added optimization profiles
[profile.dev]
opt-level = 1      # Use slightly better optimizations in dev mode
debug = 0          # Reduce debug info for faster compilation
split-debuginfo = "unpacked"  # Separate debug information
incremental = true # Enable incremental compilation

[profile.release]
opt-level = 3      # Maximum optimization
lto = "thin"       # Enable link-time optimization but keep reasonable build times
codegen-units = 1  # Maximize optimization opportunities
panic = "abort"    # No unwinding for panics in release builds - smaller binaries
strip = true       # Strip symbols from binary

